Bug 1409768 - Don't call fsync repeatedly when printing; r=bobowen

Usage of sync was a mistake when porting from the previous std::ostream code.

MozReview-Commit-ID: HwbFVlZMu6t